--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,34 @@
-#column {
-    float: left;
-    text-align: center;
-    width: 33%;
+@media screen and (min-width: 768px) {
+    .column {
+        width: 33%;
+        float: left;
+        padding: 20px;
+        list-style-type: none;
+    }
+    .column a {
+        display: block;
+    }
+    #decoration {
+        display: flex;
+    }
+    img {
+        height: 250px;
+    }
 }
 
-#column1 {
-    text-align: center;
-    width: 33%;
+@media screen and (max-width: 768px) {
+    body {
+        background-color: #000000;
+        color: #ffffff;
+    }
+    img {
+        width: 100%;
+    }
 }
 
-#column2 {
-    float: right;
-    text-align: center;
-    width: 33%;
-}
-
-#decoration {
-    display: flex;
-    list-style-type: none;
-}
-
-img {
-    height: 250px;
-}
-
-#column2 a {
-    text-align: center;
+@media screen and (max-width: 480px) {
+    body {
+        background-color: #008080;
+        color: #ffffff;
+    }
 }
