--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+.dark-mode {
+    background-color: #282828;
+    color: #ffffff;
+}
+
+.original-mode {
+    background-color: #ffffff;
+    color: #000000;
+}
+
 @media screen and (min-width: 768px) {
     .column {
         width: 33%;
